--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "license": "MIT",
   "author": "Matt DesLauriers <dave.des@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "lerp": "^1.0.0",
+    "smoothstep": "^1.0.0"
+  },
   "devDependencies": {
     "tape": "~2.13.2"
   },
